crates/bevy_derive/compile_fail/tests/deref_mut_derive/missing_deref_fail.stderr
error[E0277]: the trait bound `TupleStruct: Deref` is not satisfied
 --> tests/deref_mut_derive/missing_deref_fail.rs:9:8
  |
9 | struct TupleStruct(usize, #[deref] String);
  |        ^^^^^^^^^^^ the trait `Deref` is not implemented for `TupleStruct`
  |
note: required by a bound in `DerefMut`
 --> /rustc/4d91de4e48198da2e33413efdcd9cd2cc0c46688/library/core/src/ops/deref.rs:290:1

error[E0277]: the trait bound `TupleStruct: Deref` is not satisfied
 --> tests/deref_mut_derive/missing_deref_fail.rs:7:10
  |
7 | #[derive(DerefMut)]
  |          ^^^^^^^^ the trait `Deref` is not implemented for `TupleStruct`
  |
  = note: this error originates in the derive macro `DerefMut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Struct: Deref` is not satisfied
  --> tests/deref_mut_derive/missing_deref_fail.rs:14:8
   |
14 | struct Struct {
   |        ^^^^^^ the trait `Deref` is not implemented for `Struct`
   |
note: required by a bound in `DerefMut`
  --> /rustc/4d91de4e48198da2e33413efdcd9cd2cc0c46688/library/core/src/ops/deref.rs:290:1

error[E0277]: the trait bound `Struct: Deref` is not satisfied
  --> tests/deref_mut_derive/missing_deref_fail.rs:12:10
   |
12 | #[derive(DerefMut)]
   |          ^^^^^^^^ the trait `Deref` is not implemented for `Struct`
   |
   = note: this error originates in the derive macro `DerefMut` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
